@@ -343,6 +343,144 @@ return switch (shape) {
 
 **Answer**: Continuous JFR with 200MB rolling buffer at < 1% overhead. When something goes wrong, you have a recording of the recent past. `JFR.dump` extracts on demand.
 
+### Q56. Service is OOMing — walk through your diagnosis.
+
+**Answer**:
+1. **Confirm**: `grep "OutOfMemoryError" *.log` — what's the error message? `Java heap space`, `Metaspace`, `Direct buffer memory`, `GC overhead limit exceeded`?
+2. **Heap dump on OOM**: ensure `-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp` is set (always; the cost is zero unless triggered).
+3. **Capture dump**: triggered automatically by OOM, or proactively: `jcmd <pid> GC.heap_dump /tmp/heap.hprof`.
+4. **Analyze with Eclipse MAT**:
+   - Open dump → "Leak Suspects" report. MAT identifies the dominator tree.
+   - Look at top retained-size objects.
+   - If one ClassLoader holds GB → probably class-loading leak (web app reload, dynamic proxy, framework retention).
+   - If a `HashMap` / `Cache` holds GB → unbounded cache.
+   - If `byte[]` holds GB → buffer leak (Netty, JDBC, Kafka).
+5. **Verify with histogram**: `jcmd <pid> GC.class_histogram` shows class instance counts + total size; useful for tracking growth over time.
+6. **Fix and verify**: heap usage levels off after fix; run for 24h before declaring victory.
+
+**Common patterns**:
+- ThreadLocal not removed → leak with thread-pool reuse.
+- `static Map` cache without eviction → unbounded growth.
+- ClassLoader leak in hot-reload (most Java EE deployments).
+- Netty `ByteBuf` not released → off-heap (not in heap dump; check `Native Memory Tracking`).
+
+### Q57. JVM uses way more memory than `-Xmx`. Where's it going?
+
+**Answer**: Heap is only ~50-70% of total JVM memory. The rest:
+- **Metaspace** (class metadata): default unbounded (cap with `-XX:MaxMetaspaceSize`). Heavy-class-loading apps can spend GBs here.
+- **Code cache**: JIT-compiled native code (default 240 MB; cap `-XX:ReservedCodeCacheSize`).
+- **Thread stacks**: `threads × Xss` (default 1 MB/thread on x86). 500 threads = 500 MB.
+- **Direct buffers** (`ByteBuffer.allocateDirect`): off-heap, default cap `-XX:MaxDirectMemorySize=Xmx`.
+- **Native libraries** (JDBC drivers, JNI): variable.
+- **GC structures**: card tables, remembered sets, etc — proportional to heap.
+
+**Diagnose with Native Memory Tracking** (`-XX:NativeMemoryTracking=summary`):
+```bash
+jcmd <pid> VM.native_memory summary
+```
+Shows: Java Heap, Class, Thread, Code, GC, Symbol, Internal, Compiler — with reserved + committed for each.
+
+**Rule of thumb for container sizing**: `container_memory ≈ Xmx × 1.5-2`. Setting `-Xmx=4G` in a 4G container is asking for OOMKilled.
+
+### Q58. Service has p99 latency spikes every 5-10 seconds. What is it?
+
+**Answer**: Almost certainly GC. Workflow:
+
+1. **Enable GC log**: `-Xlog:gc*:file=gc.log:time,level,tags:filecount=10,filesize=10M`
+2. **Look for the pause times**: any pause matching the spike interval?
+3. **If yes** → which GC? G1 (concurrent, usually <100ms pauses), ZGC (sub-ms target), Parallel (long pauses, throughput-oriented), CMS (deprecated).
+4. **G1 with long pauses?** Likely **humongous allocations** (objects > 1/2 region size, default 1MB). Look for `to-space exhausted` or `humongous allocation` in log. Increase `-XX:G1HeapRegionSize` or eliminate big objects.
+5. **Switch to ZGC** for sub-ms pauses: `-XX:+UseZGC -XX:+ZGenerational`. Works well for heaps > 8GB; trade-off is higher CPU overhead (~10-15%).
+
+**Other suspects if not GC**:
+- **Connection pool eviction** (HikariCP `idleTimeout` killing idle conns)
+- **Cache TTL expiry** (Redis batch eviction)
+- **Cron-triggered work** (every 5s scheduled task pinning CPU)
+- **External downstream hiccup** (check downstream metrics)
+
+### Q59. CPU is at 100% but no obvious hot method in the profiler. What's happening?
+
+**Answer**:
+1. **GC**: GC threads can saturate CPU. Check `gc.log` for sustained collection % >5%. Or `jstat -gc <pid> 1000` watches GC every 1s.
+2. **Spinning**: a `while(true)` loop with no `sleep`/`yield`/`park`. Look at thread dump — any RUNNABLE threads in your code's loops?
+3. **Lock contention with spinning**: `synchronized` block under contention does adaptive spinning before parking. Heavy contention → CPU burn. Use `-XX:+PrintCompilation` and check JFR `Java Monitor Blocked`.
+4. **JIT compilation**: brief CPU spike at start (warmup). Continuous compilation suggests megamorphic call sites or constant deoptimization.
+5. **Container CPU throttling**: in K8s, CPU limits cause throttling — looks like 100% CPU but with delays. Check `cgroup` throttled time.
+
+**Definitive tool**: **async-profiler** with `-e itimer` mode samples ALL threads including JVM internals. JFR's "CPU Load" event also captures system-level CPU.
+
+### Q60. Service uses 95% CPU but throughput is half what it was last week. What broke?
+
+**Answer**:
+1. **Diff JVM args**: did anyone change them? `jcmd <pid> VM.command_line`.
+2. **Diff request mix**: a new request type is expensive. Look at endpoint latency by route.
+3. **JIT degradation**: code cache full. Check `jcmd <pid> Compiler.codecache`. If `code-cache-full` events, increase `ReservedCodeCacheSize`.
+4. **Cache hit-rate dropped**: a recent deploy broke the cache key. Check cache metrics — hit ratio dropped from 95% to 30%?
+5. **DB plan regression**: query plan changed (stats updated). Check `pg_stat_statements` for any query that's gotten 5× slower.
+6. **Off-heap pressure**: direct buffer leaks make malloc slow.
+7. **Background work increased**: GC, JFR, JMX collection costs scale with heap activity.
+
+**Methodology**: compare profiler output now vs last week (always keep baseline profiles). The diff highlights the cause.
+
+### Q61. How do you find a deadlock in production?
+
+**Answer**:
+1. **Thread dump**: `jcmd <pid> Thread.print` or `kill -3 <pid>` (older JVMs).
+2. **JVM auto-detects** intrinsic-lock deadlocks: thread dump output explicitly shows "Found 1 deadlock" at the bottom, with the cycle.
+3. **For `ReentrantLock` / non-intrinsic**: JVM cannot auto-detect. Look for threads in `WAITING (parking)` state on a `ReentrantLock`, with the lock held by another thread that's also blocked.
+4. **JFR continuous recording** has `Java Monitor Wait` events that surface deadlock-like patterns.
+
+**Reproducing deadlock for the fix**:
+- Identify the two (or more) locks involved in the cycle.
+- Order them globally — every thread must acquire in the same total order.
+- If natural ordering impossible, use `tryLock` with timeout + backoff: at least one thread bails out.
+
+### Q62. Network calls in your service randomly take 30+ seconds (default timeout). What now?
+
+**Answer**:
+1. **Check the connection**: was a TCP timeout? Check OS metrics for `RST` packets, `tcp_retransmit_total`.
+2. **DNS**: was hostname resolution slow? `time dig <host>` from the container. Java's `InetAddress` is famously slow on DNS failures.
+3. **Tomcat/Netty event-loop**: did a blocking operation pin the event loop? Use `Netty`'s `BlockingOperationException`.
+4. **Downstream pool exhaustion**: HikariCP's `Connection is not available, request timed out after 30000ms` means downstream's pool is full.
+5. **OS-level FD exhaustion**: `ulimit -n` reached. New connections fail or block waiting for FD release.
+6. **Container DNS / NDOTS issue**: K8s service resolution can add 1-5s if `ndots=5` and you're hitting external hosts.
+
+**Mitigation**: explicit short timeouts on every HTTP client (`OkHttp.connectTimeout(2s).readTimeout(5s)`). Circuit-break on timeout. Async retry with budget.
+
+### Q63. How do you take a thread dump in production without restarting?
+
+**Answer**:
+- **`jcmd <pid> Thread.print`**: standard, on-demand. Low overhead (~50ms pause). Captures call stacks.
+- **`jstack <pid>`**: older equivalent.
+- **`kill -3 <pid>`**: SIGQUIT — prints thread dump to stderr (usually app logs). Works without JDK tools installed.
+- **`jcmd <pid> Thread.print -l`**: includes lock info — what each thread is waiting on / holds.
+- **JFR**: `jcmd <pid> JFR.start name=trouble` then `JFR.dump filename=trouble.jfr`. Much more than thread dump.
+
+**Take multiple dumps** (5 seconds apart, 3-5 times). A single dump shows a moment; multiple dumps show trends — what's STUCK vs what's transient.
+
+### Q64. JIT compiler is generating bad code. How do you diagnose?
+
+**Answer**:
+1. **Confirm with `-XX:+PrintCompilation`**: shows each compilation event. Look for `made not entrant` (deoptimization) — frequent = unstable inline cache.
+2. **Megamorphic call site**: a virtual call with >3 types in the cache → inline cache misses → no inlining → slow. Use `-XX:+PrintInlining` to see what's not inlining (verbose; usually with `-XX:+UnlockDiagnosticVMOptions`).
+3. **Compilation log**: `-XX:+LogCompilation` writes a detailed XML log. Use JITWatch tool to visualize.
+4. **JFR**: includes "JIT Compilation" events — shows what's been (de)compiled.
+5. **Profile-guided refactor**: identify the megamorphic site; refactor to bimorphic (two types) or use `final` to give JIT the closed-set hint.
+
+**For the rare case where JIT is wrong**: file a JBS issue with the failing code + flags. JVM team takes these seriously.
+
+### Q65. Service slowness coincides with deploy of a NEW service that doesn't even talk to yours. What gives?
+
+**Answer**: Indirect causes:
+1. **Shared infrastructure**: same DB, cache, message broker. New service starts heavy load → contention.
+2. **DNS / Service discovery**: hundreds of new pods registering → DNS lookups slow.
+3. **K8s scheduling**: new service requested CPU/memory → your pod got evicted to a noisier node.
+4. **Network**: shared NAT, shared egress.
+5. **Observability backend**: new service flooding the metrics pipeline → metrics ingestion slows → alerts misfire.
+6. **CI/CD pipeline**: new service's deploy filling shared artifact registry → image pulls slow.
+
+**Diagnostic**: noisy neighbor on the **node** (check K8s node CPU/memory), on the **DB** (`pg_stat_activity` for new queries), or on the **network** (egress bandwidth metrics).
+
 ## Coding Round Examples (3)
 
 ### Q56. Implement a bounded blocking queue.
